--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.15
   persistent_bottom_nav_bar: ^5.0.2
+  printing: ^5.10.3
   shared_preferences: ^2.1.2
   supabase_flutter: ^1.10.3
   zoom_tap_animation: ^1.1.0
