--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,14 @@ dependencies:
   awesome_dialog: ^3.1.0
   calendar_timeline: ^1.1.2
   cupertino_icons: ^1.0.2
-  dartz: ^0.10.1
+  dio: ^5.2.1+1
   email_validator: ^2.1.17
   equatable: ^2.0.5
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
   flutter:
     sdk: flutter
+  flutter_cached_pdfview: ^0.4.1
   flutter_easyloading: ^3.0.5
   flutter_screenutil: ^5.6.1
   flutter_svg: ^2.0.0
@@ -25,11 +26,13 @@ dependencies:
   image_picker: ^0.8.9
   intl: ^0.18.1
   loading_animation_widget: ^1.2.0+4
+  material_dialogs: ^1.1.4
   mobile_scanner: ^3.2.0
+  open_file: ^3.3.2
   path: ^1.8.0
   path_provider: ^2.0.15
+  permission_handler: ^10.3.0
   persistent_bottom_nav_bar: ^5.0.2
-  printing: ^5.10.3
   shared_preferences: ^2.1.2
   supabase_flutter: ^1.10.3
   zoom_tap_animation: ^1.1.0
